--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                 <div class="container">
                     <div class="box box-width">
                         <label for="firstname">Nome</label>
-                        <input type="text" name="firstname" id="firstname">
+                        <input type="text" name="firstname" id="firstname" required>
                     </div>
                     <div class="box box-width">
                         <label for="lastname">Sobrenome</label>
-                        <input type="text" name="lastname" id="lastname">
+                        <input type="text" name="lastname" id="lastname" required>
                     </div>
                 </div>
                 
                 <div class="box">
                     <label for="email">Email <span>(digite um email válido)</span></label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" required>
                 </div>
             </fieldset>
 
@@ -49,12 +49,12 @@
                 <legend>Informações do mentor</legend>
                 <div class="box">
                     <label for="mentorname">Selecione quem foi o seu mentor</label>
-                    <input type="text" name="mentorname" id="mentorname">
+                    <input type="text" name="mentorname" id="mentorname" required>
                 </div>
 
                 <div class="box">
                     <label for="textarea">Feedback sobre o mentor</label>
-                    <input type="text" name="textarea" id="textarea">
+                    <input type="text" name="textarea" id="textarea" required>
                 </div>
 
                 <div class="boxcheck">
